--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -132,6 +132,7 @@ a {
     vertical-align: middle; }
     .masthead .intro-body .brand-heading {
       font-size: 100px;
+      border: white;
       margin-left: 8px;
       margin-top: 20px; }
     .masthead .intro-body .intro-text {
@@ -206,12 +207,246 @@ a {
     margin-left: 10px;
     color: white; }
 
+.product-section {
+  display: flex;
+  color: black;
+  background-color: white;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  height: auto; }
+  .product-section h2 {
+    align-items: left;
+    text-align: left;
+    font-size: 50px;
+    margin-bottom: 30px;
+    padding-top: 0px;
+    padding-left: 10px;
+    margin-left: 0px; }
+  .product-section h3 {
+    text-align: left;
+    font-size: 40px;
+    margin-top: -30px;
+    margin-left: 0px; }
+  .product-section p {
+    text-align: center;
+    margin-top: 0px;
+    margin-left: 15px; }
+
+.product-cover {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background-color: transparent;
+  justify-content: space-around;
+  align-items: flex-start;
+  align-content: center;
+  height: 99%;
+  width: 99%;
+  padding-top: 70px;
+  padding-bottom: 70px; }
+
+.wrapper {
+  width: 300px;
+  height: 500px;
+  background: white;
+  border: black;
+  margin: auto;
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px 10px 10px 10px;
+  box-shadow: 0;
+  transform: scale(0.95);
+  transition: box-shadow 0.5s, transform 0.5s; }
+  .wrapper:hover {
+    transform: scale(1);
+    box-shadow: 5px 20px 30px rgba(0, 0, 0, 0.2); }
+  .wrapper .container {
+    width: 100%;
+    height: 100%; }
+    .wrapper .container .top-chiyogiku {
+      height: 80%;
+      width: 100%;
+      background: url("../img/stocks/yawara-chiyonogiku") no-repeat center center;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%; }
+    .wrapper .container .top-chiyogiku {
+      height: 80%;
+      width: 100%;
+      background: url("../img/stocks/yawara-chiyonogiku.jpg") no-repeat center center;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%; }
+    .wrapper .container .top-chigononiwa {
+      height: 80%;
+      width: 100%;
+      background: url("../img/stocks/yawara-chigononiwa.jpg") no-repeat center center;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%; }
+    .wrapper .container .top-hananomai {
+      height: 80%;
+      width: 100%;
+      background: url("../img/stocks/yawara-hananomai.jpg") no-repeat center center;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%; }
+    .wrapper .container .top-iwamura {
+      height: 80%;
+      width: 100%;
+      background: url("../img/stocks/yawara-iwamura.jpg") no-repeat center center;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%; }
+    .wrapper .container .top-komachi {
+      height: 80%;
+      width: 100%;
+      background: url("../img/stocks/yawara-komachi.jpg") no-repeat center center;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%; }
+    .wrapper .container .top-yamada {
+      height: 80%;
+      width: 100%;
+      background: url("../img/stocks/yawara-yamada.jpg") no-repeat center center;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%; }
+    .wrapper .container .top-tenryo {
+      height: 80%;
+      width: 100%;
+      background: url("../img/stocks/waza-tenryo.jpg") no-repeat center center;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%; }
+    .wrapper .container .top-chiyonogikuwaza {
+      height: 80%;
+      width: 100%;
+      background: url("../img/stocks/waza-chiyonogiku.jpg") no-repeat center center;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%; }
+    .wrapper .container .top-yamadawaza {
+      height: 80%;
+      width: 100%;
+      background: url("../img/stocks/waza-yamada.jpg") no-repeat center center;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%; }
+    .wrapper .container .bottom {
+      width: 200%;
+      height: 20%;
+      transition: transform 0.5s; }
+      .wrapper .container .bottom.clicked {
+        transform: translateX(-50%); }
+      .wrapper .container .bottom h1 {
+        font-size: 20px;
+        margin: 0;
+        padding: 0; }
+      .wrapper .container .bottom p {
+        font-size: 20px;
+        margin: 0;
+        padding: 0; }
+      .wrapper .container .bottom .left {
+        height: 100%;
+        width: 50%;
+        background: #f4f4f4;
+        position: relative;
+        float: left; }
+        .wrapper .container .bottom .left .details {
+          padding: 20px;
+          float: left;
+          width: calc(70% - 40px); }
+        .wrapper .container .bottom .left .taste {
+          float: right;
+          width: calc(30% - 2px);
+          height: 100%;
+          background: #f1f1f1;
+          transition: background 0.5s;
+          border-left: solid thin rgba(0, 0, 0, 0.1); }
+          .wrapper .container .bottom .left .taste i {
+            font-size: 30px;
+            padding-top: 20px;
+            padding-left: 30px;
+            padding-bottom: 10px;
+            color: #254053;
+            transition: transform 0.5s; }
+          .wrapper .container .bottom .left .taste p {
+            font-size: 20px;
+            margin-top: -10px;
+            padding-left: 10px;
+            padding-bottom: 10px; }
+      .wrapper .container .bottom .right {
+        width: 50%;
+        background: red;
+        color: white;
+        float: right;
+        height: 200%;
+        overflow: hidden; }
+        .wrapper .container .bottom .right:hover .remove, .wrapper .container .bottom .right:hover .done {
+          transform: translateY(-100%); }
+  .wrapper .inside {
+    z-index: 9;
+    background: black;
+    border-radius: white;
+    width: 140px;
+    height: 140px;
+    position: absolute;
+    top: -70px;
+    right: -70px;
+    border-radius: 0px 0px 200px 200px;
+    transition: all 0.5s, border-radius 2s, top 1s;
+    overflow: hidden; }
+    .wrapper .inside .icon {
+      position: absolute;
+      right: 85px;
+      top: 85px;
+      color: white;
+      opacity: 1; }
+    .wrapper .inside:hover {
+      width: 100%;
+      right: 0;
+      top: 0;
+      border-radius: 0;
+      height: 80%; }
+      .wrapper .inside:hover .icon {
+        opacity: 0;
+        right: 15px;
+        top: 15px; }
+      .wrapper .inside:hover .contents {
+        opacity: 1;
+        transform: scale(1);
+        transform: translateY(0); }
+    .wrapper .inside .contents {
+      padding: 5%;
+      opacity: 0;
+      transform: scale(0.5);
+      transform: translateY(-200%);
+      transition: opacity 0.2s, transform 0.8s; }
+      .wrapper .inside .contents table {
+        text-align: left;
+        width: 100%; }
+      .wrapper .inside .contents h1, .wrapper .inside .contents p, .wrapper .inside .contents table {
+        color: white; }
+      .wrapper .inside .contents p {
+        font-size: 13px; }
+
 .special-section {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: black;
-  background-color: yellow;
+  color: white;
+  background-color: black;
   padding-top: 100px;
   padding-bottom: 100px;
   height: auto; }
@@ -221,6 +456,7 @@ a {
     font-size: 50px;
     margin-bottom: 30px;
     padding-top: -10px;
+    padding-top: 10px;
     margin-left: 0px; }
   .special-section h3 {
     text-align: left;
@@ -281,13 +517,14 @@ a {
 .btn-download {
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  width: 300px; }
 
 .contact-section {
   padding-top: 100px;
   padding-bottom: 100px;
-  color: black;
-  background-color: white;
+  color: white;
+  background-color: gray;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -307,6 +544,7 @@ a {
 .btn {
   font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 400;
+  width: 200px;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
@@ -324,9 +562,10 @@ a {
     background-color: none; }
 
 .btn-social {
-  color: black;
-  border: 1px solid black;
+  color: white;
+  border: 1px solid white;
   margin-left: 5px;
+  margin-top: 10px;
   background-color: transparent; }
   .btn-social:focus, .btn-social:hover {
     color: red;
@@ -335,13 +574,14 @@ a {
     background-color: none; }
 
 ul.banner-social-buttons {
-  margin-top: 0; }
+  margin-top: 10px; }
   @media (max-width: 1199px) {
     ul.banner-social-buttons {
       margin-top: 15px; } }
   @media (max-width: 767px) {
     ul.banner-social-buttons li {
       display: block;
+      margin-top: 10px;
       margin-bottom: 20px;
       padding: 0; }
       ul.banner-social-buttons li:last-child {
