--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -4,7 +4,7 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
  */
 body {
-  font-family: 'Lora', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Playfair Display', serif;
   position: relative;
   width: 100%;
   height: 100%;
@@ -15,7 +15,11 @@ html {
   width: 100%;
   height: 100%; }
 
-h1,
+h1 {
+  font-family: 'Playfair Display', serif;
+  font-weight: 700; }
+
+
 h2 {
   font-family: 'Playfair Display', serif;
   font-weight: 700;
@@ -35,7 +39,7 @@ h3 {
 h4,
 h5,
 h6 {
-  font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Playfair Display', serif;
   font-weight: 700;
   margin: 0 0 35px;
   letter-spacing: 1px;
@@ -137,7 +141,7 @@ a {
       margin-top: 20px; }
     .masthead .intro-body .intro-text {
       font-size: 18px; }
-  @media (min-width: 768px) {
+  @media (min-width: 992px) {
     .masthead {
       background-size: contain;
       height: 100%;
@@ -255,13 +259,15 @@ a {
   border-radius: 10px 10px 10px 10px;
   box-shadow: 0;
   transform: scale(0.95);
-  transition: box-shadow 0.5s, transform 0.5s; }
+  transition: box-shadow 0.5s, transform 0.5s;
+  border: 0.5px solid #ddd9d4; }
   .wrapper:hover {
     transform: scale(1);
     box-shadow: 5px 20px 30px rgba(0, 0, 0, 0.2); }
   .wrapper .container {
     width: 100%;
-    height: 100%; }
+    height: 100%;
+    margin: 0; }
     .wrapper .container .top-chiyogiku {
       height: 80%;
       width: 100%;
@@ -269,7 +275,9 @@ a {
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
-      background-size: 100%; }
+      background-size: 100%;
+      margin: 0;
+      margin-bottom: -20px; }
     .wrapper .container .top-chiyogiku {
       height: 80%;
       width: 100%;
@@ -277,7 +285,8 @@ a {
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
-      background-size: 100%; }
+      background-size: 100%;
+      margin-bottom: -20px; }
     .wrapper .container .top-chigononiwa {
       height: 80%;
       width: 100%;
@@ -285,7 +294,8 @@ a {
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
-      background-size: 100%; }
+      background-size: 100%;
+      margin-bottom: -20px; }
     .wrapper .container .top-hananomai {
       height: 80%;
       width: 100%;
@@ -293,7 +303,8 @@ a {
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
-      background-size: 100%; }
+      background-size: 100%;
+      margin-bottom: -20px; }
     .wrapper .container .top-iwamura {
       height: 80%;
       width: 100%;
@@ -301,7 +312,8 @@ a {
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
-      background-size: 100%; }
+      background-size: 100%;
+      margin-bottom: -20px; }
     .wrapper .container .top-komachi {
       height: 80%;
       width: 100%;
@@ -309,7 +321,8 @@ a {
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
-      background-size: 100%; }
+      background-size: 100%;
+      margin-bottom: -20px; }
     .wrapper .container .top-yamada {
       height: 80%;
       width: 100%;
@@ -317,7 +330,8 @@ a {
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
-      background-size: 100%; }
+      background-size: 100%;
+      margin-bottom: -20px; }
     .wrapper .container .top-tenryo {
       height: 80%;
       width: 100%;
@@ -325,7 +339,8 @@ a {
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
-      background-size: 100%; }
+      background-size: 100%;
+      margin-bottom: -20px; }
     .wrapper .container .top-chiyonogikuwaza {
       height: 80%;
       width: 100%;
@@ -333,7 +348,8 @@ a {
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
-      background-size: 100%; }
+      background-size: 100%;
+      margin-bottom: -20px; }
     .wrapper .container .top-yamadawaza {
       height: 80%;
       width: 100%;
@@ -341,63 +357,41 @@ a {
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
-      background-size: 100%; }
+      background-size: 100%;
+      margin-bottom: -20px; }
     .wrapper .container .bottom {
-      width: 200%;
+      width: 100%;
       height: 20%;
+      margin: 0;
       transition: transform 0.5s; }
       .wrapper .container .bottom.clicked {
         transform: translateX(-50%); }
+      .wrapper .container .bottom .serial-number {
+        padding: 0;
+        margin-bottom: 3px; }
+      .wrapper .container .bottom h2 {
+        text-align: center;
+        font-size: 18px;
+        margin: 0;
+        margin-top: -5px;
+        padding-top: 5px;
+        padding-bottom: 0px; }
       .wrapper .container .bottom h1 {
-        font-size: 20px;
+        text-align: center;
+        font-size: 25px;
         margin: 0;
-        padding: 0; }
+        padding-top: 0px;
+        padding-bottom: 0px; }
       .wrapper .container .bottom p {
-        font-size: 20px;
+        text-align: center;
+        font-size: 10px;
         margin: 0;
-        padding: 0; }
-      .wrapper .container .bottom .left {
-        height: 100%;
-        width: 50%;
-        background: #f4f4f4;
-        position: relative;
-        float: left; }
-        .wrapper .container .bottom .left .details {
-          padding: 30px;
-          float: left;
-          width: calc(70% - 40px); }
-        .wrapper .container .bottom .left .taste {
-          float: right;
-          width: calc(30% - 2px);
-          height: 100%;
-          background: #f1f1f1;
-          transition: background 0.5s;
-          border-left: solid thin rgba(0, 0, 0, 0.1); }
-          .wrapper .container .bottom .left .taste i {
-            font-size: 30px;
-            padding-top: 20px;
-            padding-left: 30px;
-            padding-bottom: 10px;
-            color: #254053;
-            transition: transform 0.5s; }
-          .wrapper .container .bottom .left .taste p {
-            font-size: 20px;
-            margin-top: -10px;
-            padding-left: 10px;
-            padding-bottom: 10px; }
-      .wrapper .container .bottom .right {
-        width: 50%;
-        background: red;
-        color: white;
-        float: right;
-        height: 200%;
-        overflow: hidden; }
-        .wrapper .container .bottom .right:hover .remove, .wrapper .container .bottom .right:hover .done {
-          transform: translateY(-100%); }
+        padding-top: 5px;
+        padding-bottom: 5px; }
   .wrapper .inside {
     z-index: 9;
-    background: gray;
-    border-radius: white;
+    background: black;
+    border-radius: none;
     width: 140px;
     height: 140px;
     position: absolute;
@@ -412,23 +406,27 @@ a {
       top: 85px;
       color: white;
       opacity: 1; }
-    .wrapper .inside:hover {
-      width: 100%;
-      right: 0;
-      top: 0;
-      border-radius: 0;
-      height: 80%; }
-      .wrapper .inside:hover .icon {
-        opacity: 0;
-        right: 15px;
-        top: 15px; }
-      .wrapper .inside:hover .contents {
-        opacity: 1;
-        transform: scale(1);
-        transform: translateY(0); }
+      .wrapper .inside .icon a:visited {
+        color: white; }
+    @media (min-width: 992px) {
+      .wrapper .inside:hover {
+        width: 100%;
+        right: 0;
+        top: 0;
+        border-radius: 0;
+        height: 75%; }
+        .wrapper .inside:hover .icon {
+          opacity: 0;
+          right: 15px;
+          top: 15px; }
+        .wrapper .inside:hover .contents {
+          opacity: 1;
+          transform: scale(1);
+          transform: translateY(0); } }
     .wrapper .inside .contents {
       padding: 5%;
       opacity: 0;
+      position: relative;
       transform: scale(0.5);
       transform: translateY(-200%);
       transition: opacity 0.2s, transform 0.8s; }
@@ -437,8 +435,24 @@ a {
         width: 100%; }
       .wrapper .inside .contents h1, .wrapper .inside .contents p, .wrapper .inside .contents table {
         color: white; }
+        .wrapper .inside .contents h1 td, .wrapper .inside .contents p td, .wrapper .inside .contents table td {
+          font-size: 12px; }
       .wrapper .inside .contents p {
-        font-size: 13px; }
+        font-size: 20px; }
+      .wrapper .inside .contents .story {
+        position: absolute;
+        left: 0px;
+        margin-top: auto; }
+        .wrapper .inside .contents .story h1 {
+          margin-top: 5px;
+          margin-left: 10px;
+          font-size: 25px;
+          margin-bottom: 5px; }
+        .wrapper .inside .contents .story p {
+          font-size: 12px;
+          margin-left: 8px;
+          margin-right: 5px;
+          text-align: left; }
 
 .special-section {
   display: flex;
