--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -6,7 +6,7 @@
 //ここから標準bootstrapの上書き。
 
 body {
-  font-family: 'Lora', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Playfair Display', serif;
 
   position: relative;
 
@@ -22,7 +22,10 @@ html {
   height: 100%;
 }
 
-h1,
+h1{
+  font-family: 'Playfair Display', serif;
+  font-weight: 700;
+},
 h2 {
   font-family: 'Playfair Display', serif;
   font-weight: 700;
@@ -44,7 +47,7 @@ h3 {
 h4,
 h5,
 h6 {
-  font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Playfair Display', serif;
   font-weight: 700;
 
   margin: 0 0 35px;
@@ -185,7 +188,7 @@ a {
 
     }
   }
-  @media(min-width:768px) {
+  @media(min-width:992px) {
     background-size: contain;
     height: 100%;
     padding: 0;
@@ -330,6 +333,7 @@ a {
   box-shadow: 0;
   transform: scale(0.95);
   transition: box-shadow 0.5s, transform 0.5s;
+  border: 0.5px solid #ddd9d4;
   &:hover{
     transform: scale(1);
     box-shadow: 5px 20px 30px rgba(0,0,0,0.2);
@@ -338,178 +342,152 @@ a {
   .container{
     width:100%;
     height:100%;
+    margin: 0;
+
     .top-chiyogiku {
       height: 80%;
       width:100%;
       background: url("../img/stocks/yawara-chiyonogiku") no-repeat center center;
-  -webkit-background-size: 100%;
-  -moz-background-size: 100%;
-  -o-background-size: 100%;
-  background-size: 100%;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%;
+      margin: 0;
+      margin-bottom: -20px;
     }
     .top-chiyogiku {
       height: 80%;
       width:100%;
       background: url("../img/stocks/yawara-chiyonogiku.jpg") no-repeat center center;
-  -webkit-background-size: 100%;
-  -moz-background-size: 100%;
-  -o-background-size: 100%;
-  background-size: 100%;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%;
+      margin-bottom: -20px;
     }
     .top-chigononiwa {
       height: 80%;
       width:100%;
       background: url("../img/stocks/yawara-chigononiwa.jpg") no-repeat center center;
-  -webkit-background-size: 100%;
-  -moz-background-size: 100%;
-  -o-background-size: 100%;
-  background-size: 100%;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%;
+      margin-bottom: -20px;
     }
     .top-hananomai {
       height: 80%;
       width:100%;
       background: url("../img/stocks/yawara-hananomai.jpg") no-repeat center center;
-  -webkit-background-size: 100%;
-  -moz-background-size: 100%;
-  -o-background-size: 100%;
-  background-size: 100%;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%;
+      margin-bottom: -20px;
     }
     .top-iwamura {
       height: 80%;
       width:100%;
       background: url("../img/stocks/yawara-iwamura.jpg") no-repeat center center;
-  -webkit-background-size: 100%;
-  -moz-background-size: 100%;
-  -o-background-size: 100%;
-  background-size: 100%;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%;
+      margin-bottom: -20px;
     }
     .top-komachi {
       height: 80%;
       width:100%;
       background: url("../img/stocks/yawara-komachi.jpg") no-repeat center center;
-  -webkit-background-size: 100%;
-  -moz-background-size: 100%;
-  -o-background-size: 100%;
-  background-size: 100%;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%;
+      margin-bottom: -20px;
     }
     .top-yamada {
       height: 80%;
       width:100%;
       background: url("../img/stocks/yawara-yamada.jpg") no-repeat center center;
-  -webkit-background-size: 100%;
-  -moz-background-size: 100%;
-  -o-background-size: 100%;
-  background-size: 100%;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%;
+      margin-bottom: -20px;
     }
     .top-tenryo {
       height: 80%;
       width:100%;
       background: url("../img/stocks/waza-tenryo.jpg") no-repeat center center;
-  -webkit-background-size: 100%;
-  -moz-background-size: 100%;
-  -o-background-size: 100%;
-  background-size: 100%;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%;
+      margin-bottom: -20px;
     }
     .top-chiyonogikuwaza {
       height: 80%;
       width:100%;
       background: url("../img/stocks/waza-chiyonogiku.jpg") no-repeat center center;
-  -webkit-background-size: 100%;
-  -moz-background-size: 100%;
-  -o-background-size: 100%;
-  background-size: 100%;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%;
+      margin-bottom: -20px;
     }
     .top-yamadawaza {
       height: 80%;
       width:100%;
       background: url("../img/stocks/waza-yamada.jpg") no-repeat center center;
-  -webkit-background-size: 100%;
-  -moz-background-size: 100%;
-  -o-background-size: 100%;
-  background-size: 100%;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%;
+      margin-bottom: -20px;
     }
 
     .bottom{
-      width: 200%;
+      width: 100%;
       height: 20%;
+      margin: 0;
       transition: transform 0.5s;
       &.clicked{
         transform: translateX(-50%);
       }
+      .serial-number {
+        padding: 0;
+        margin-bottom: 3px;
+      }
+      h2 {
+        text-align: center;
+        font-size: 18px;
+        margin:0;
+        margin-top: -5px;
+        padding-top:5px;
+        padding-bottom:0px;
+      }
       h1 {
-          font-size: 20px;
-          margin:0;
-          padding:0;
+        text-align: center;
+        font-size: 25px;
+        margin:0;
+        padding-top:0px;
+        padding-bottom:0px;
       }
       p {
-          font-size: 20px;
-          margin:0;
-          padding:0;
-
+        text-align: center;
+        font-size: 10px;
+        margin:0;
+        padding-top:5px;
+        padding-bottom:5px;
       }
-      .left{
-        height:100%;
-        width: 50%;
-        background: #f4f4f4;
-        position:relative;
-        float:left;
-        .details{
-          padding: 30px;
-          float: left;
-          width: calc(70% - 40px);
-        }
-        .taste{
-          float:right;
-          width: calc(30% - 2px);
-          height:100%;
-          background: #f1f1f1;
-          transition: background 0.5s;
-          border-left:solid thin rgba(0,0,0,0.1);
-          i {
-            font-size:30px;
-            padding-top: 20px;
-            padding-left: 30px;
-            padding-bottom:10px;
-            color: #254053;
-            transition: transform 0.5s;
-          }
-          p{
-              font-size: 20px;
-              margin-top: -10px;
-              padding-left: 10px;
-              padding-bottom:10px;
-          }
 
-          // &:hover{
-          //   background: #A6CDDE;
-          // }
-          // &:hover i{
-          //   transform: translateY(5px);
-          //   color:#00394B;
-          // }
-        }
-      }
-      .right{
-        width: 50%;
-        background: red;
-        color: white;
-        float:right;
-        height:200%;
-        overflow: hidden;
-
-        &:hover{
-          .remove, .done{
-            transform: translateY(-100%);
-          }
-        }
-      }
     }
   }
 
-  .inside{
+  .inside {
     z-index:9;
-    background: gray;
-    border-radius: white;
+    background: black;
+    border-radius: none;
     width:140px;
     height:140px;
     position: absolute;
@@ -524,13 +502,17 @@ a {
       top:85px;
       color:white;
       opacity: 1;
+      a:visited {
+        color: white;
+      }
     }
-    &:hover{
+    @media(min-width:992px) {
+    &:hover {
       width:100%;
       right:0;
       top:0;
       border-radius: 0;
-      height:80%;
+      height:75%;
       .icon{
         opacity: 0;
         right:15px;
@@ -542,9 +524,11 @@ a {
         transform: translateY(0);
       }
     }
+  }
     .contents{
       padding: 5%;
       opacity: 0;
+      position: relative;
       transform: scale(0.5);
       transform: translateY(-200%);
       transition: opacity 0.2s, transform 0.8s;
@@ -554,9 +538,29 @@ a {
       }
       h1, p, table{
         color: white;
+        td {
+          font-size:12px;
+        }
       }
-      p{
-        font-size:13px;
+      p {
+        font-size:20px;
+      }
+      .story {
+        position: absolute;
+        left:0px;
+        margin-top: auto;
+        h1 {
+          margin-top: 5px;
+          margin-left: 10px;
+          font-size:25px;
+          margin-bottom: 5px;;
+        }
+        p {
+          font-size:12px;
+          margin-left: 8px;
+          margin-right: 5px;
+          text-align:left;
+        }
       }
     }
   }
